# ranked_choice_voting_online

./: .env  Cargo.toml
migrations/: 1_votes.sql
src/: config.rs  error.rs  http.rs  main.rs
src/http/: add_candidate.rs  create_election.rs  election.rs  vote.rs
templates/: election.html.stpl  index.html.stpl
